tests/errors/semantic_error_5.fm
PASTA_RAIZ "/home/usuario/documentos";
REGRA SE $TIPO_DE_ARQUIVO EH "pdf" ENTAO EXCLUIR; // $TIPO_DE_ARQUIVO não é uma variável de metadado válida
